-- =============================================
-- SQL Script для создания базы данных АИС CustomPC Manager
-- СУБД: Microsoft SQL Server
-- =============================================

CREATE DATABASE CustomPC_DB;
GO

USE CustomPC_DB;
GO

-- =============================================
-- Таблица: отделы
-- =============================================
CREATE TABLE отделы (
    отдел_id INT IDENTITY(1,1) PRIMARY KEY,
    название VARCHAR(100) NOT NULL
);
GO

-- =============================================
-- Таблица: роли
-- =============================================
CREATE TABLE роли (
    роль_id INT IDENTITY(1,1) PRIMARY KEY,
    название_роли VARCHAR(50) NOT NULL UNIQUE
);
GO

-- =============================================
-- Таблица: склады
-- =============================================
CREATE TABLE склады (
    склад_id INT IDENTITY(1,1) PRIMARY KEY,
    название VARCHAR(100) NOT NULL,
    адрес NVARCHAR(MAX) NOT NULL
);
GO

-- =============================================
-- Таблица: компоненты
-- =============================================
CREATE TABLE компоненты (
    компонент_id INT IDENTITY(1,1) PRIMARY KEY,
    наименование VARCHAR(255) NOT NULL,
    тип VARCHAR(50) NOT NULL,
    производитель VARCHAR(100) NOT NULL
);
GO

-- =============================================
-- Таблица: клиенты
-- =============================================
CREATE TABLE клиенты (
    клиент_id INT IDENTITY(1,1) PRIMARY KEY,
    тип_клиента VARCHAR(20) NOT NULL CHECK (тип_клиента IN ('физическое', 'юридическое')),
    фамилия VARCHAR(100) NULL,
    имя VARCHAR(100) NULL,
    отчество VARCHAR(100) NULL,
    наименование_организации VARCHAR(255) NULL,
    email VARCHAR(255) NOT NULL,
    номер_телефона VARCHAR(20) NOT NULL,
    дата_регистрации DATETIME NOT NULL DEFAULT GETDATE()
);
GO

-- =============================================
-- Таблица: сотрудники
-- =============================================
CREATE TABLE сотрудники (
    сотрудник_id INT IDENTITY(1,1) PRIMARY KEY,
    фамилия VARCHAR(100) NOT NULL,
    имя VARCHAR(100) NOT NULL,
    отчество VARCHAR(100) NULL,
    должность VARCHAR(100) NOT NULL,
    дата_приёма DATE NOT NULL,
    отдел_id INT NOT NULL,
    CONSTRAINT FK_сотрудники_отделы FOREIGN KEY (отдел_id) REFERENCES отделы(отдел_id)
);
GO

-- =============================================
-- Таблица: пользователи
-- =============================================
CREATE TABLE пользователи (
    пользователь_id INT IDENTITY(1,1) PRIMARY KEY,
    логин VARCHAR(100) NOT NULL UNIQUE,
    пароль VARCHAR(255) NOT NULL,
    роль_id INT NOT NULL,
    сотрудник_id INT NULL,
    клиент_id INT NULL,
    активен BIT NOT NULL DEFAULT 1,
    дата_создания DATETIME NOT NULL DEFAULT GETDATE(),
    дата_последнего_входа DATETIME NULL,
    CONSTRAINT FK_пользователи_роли FOREIGN KEY (роль_id) REFERENCES роли(роль_id),
    CONSTRAINT FK_пользователи_сотрудники FOREIGN KEY (сотрудник_id) REFERENCES сотрудники(сотрудник_id),
    CONSTRAINT FK_пользователи_клиенты FOREIGN KEY (клиент_id) REFERENCES клиенты(клиент_id)
);
GO

-- =============================================
-- Таблица: заказы
-- =============================================
CREATE TABLE заказы (
    заказ_id INT IDENTITY(1,1) PRIMARY KEY,
    клиент_id INT NOT NULL,
    статус VARCHAR(50) NOT NULL CHECK (статус IN ('новый', 'в_работе', 'собран', 'отгружен', 'выполнен')),
    общая_сумма DECIMAL(12,2) NOT NULL,
    дата_создания DATETIME NOT NULL DEFAULT GETDATE(),
    дата_отгрузки DATETIME NULL,
    CONSTRAINT FK_заказы_клиенты FOREIGN KEY (клиент_id) REFERENCES клиенты(клиент_id)
);
GO

-- =============================================
-- Таблица: сборочные_задания
-- =============================================
CREATE TABLE сборочные_задания (
    сборка_id INT IDENTITY(1,1) PRIMARY KEY,
    название_конфигурации VARCHAR(255) NOT NULL,
    статус VARCHAR(50) NOT NULL CHECK (статус IN ('ожидает', 'в_сборке', 'готово')),
    сотрудник_id INT NULL,
    заказ_id INT NULL,
    дата_начала DATETIME NULL,
    дата_завершения DATETIME NULL,
    CONSTRAINT FK_сборочные_задания_сотрудники FOREIGN KEY (сотрудник_id) REFERENCES сотрудники(сотрудник_id),
    CONSTRAINT FK_сборочные_задания_заказы FOREIGN KEY (заказ_id) REFERENCES заказы(заказ_id)
);
GO

-- =============================================
-- Таблица: компоненты_в_сборке
-- =============================================
CREATE TABLE компоненты_в_сборке (
    сборка_id INT NOT NULL,
    компонент_id INT NOT NULL,
    количество INT NOT NULL,
    CONSTRAINT PK_компоненты_в_сборке PRIMARY KEY (сборка_id, компонент_id),
    CONSTRAINT FK_компоненты_в_сборке_сборочные_задания FOREIGN KEY (сборка_id) REFERENCES сборочные_задания(сборка_id),
    CONSTRAINT FK_компоненты_в_сборке_компоненты FOREIGN KEY (компонент_id) REFERENCES компоненты(компонент_id)
);
GO

-- =============================================
-- Таблица: остатки_на_складе
-- =============================================
CREATE TABLE остатки_на_складе (
    компонент_id INT NOT NULL,
    склад_id INT NOT NULL,
    количество INT NOT NULL CHECK (количество >= 0),
    дата_обновления DATETIME NOT NULL DEFAULT GETDATE(),
    CONSTRAINT PK_остатки_на_складе PRIMARY KEY (компонент_id, склад_id),
    CONSTRAINT FK_остатки_на_складе_компоненты FOREIGN KEY (компонент_id) REFERENCES компоненты(компонент_id),
    CONSTRAINT FK_остатки_на_складе_склады FOREIGN KEY (склад_id) REFERENCES склады(склад_id)
);
GO

-- =============================================
-- Таблица: аудит_изменений
-- =============================================
CREATE TABLE аудит_изменений (
    аудит_id INT IDENTITY(1,1) PRIMARY KEY,
    таблица VARCHAR(100) NOT NULL,
    операция VARCHAR(10) NOT NULL CHECK (операция IN ('INSERT', 'UPDATE', 'DELETE')),
    пользователь_id INT NOT NULL,
    дата_изменения DATETIME NOT NULL DEFAULT GETDATE(),
    детали NVARCHAR(MAX) NOT NULL,
    CONSTRAINT FK_аудит_изменений_пользователи FOREIGN KEY (пользователь_id) REFERENCES пользователи(пользователь_id)
);
GO

-- =============================================
-- Индексы для улучшения производительности
-- =============================================
CREATE INDEX IX_пользователи_логин ON пользователи(логин);
CREATE INDEX IX_пользователи_роль_id ON пользователи(роль_id);
CREATE INDEX IX_заказы_клиент_id ON заказы(клиент_id);
CREATE INDEX IX_заказы_статус ON заказы(статус);
CREATE INDEX IX_сборочные_задания_статус ON сборочные_задания(статус);
CREATE INDEX IX_сборочные_задания_сотрудник_id ON сборочные_задания(сотрудник_id);
CREATE INDEX IX_клиенты_email ON клиенты(email);
CREATE INDEX IX_клиенты_телефон ON клиенты(номер_телефона);
CREATE INDEX IX_остатки_компонент_id ON остатки_на_складе(компонент_id);
CREATE INDEX IX_аудит_таблица ON аудит_изменений(таблица);
CREATE INDEX IX_аудит_дата ON аудит_изменений(дата_изменения);
GO

-- =============================================
-- Начальные данные: роли
-- =============================================
INSERT INTO роли (название_роли) VALUES 
('Администратор'),
('Менеджер'),
('Сборщик'),
('Клиент');
GO

-- =============================================
-- Начальные данные: отделы
-- =============================================
INSERT INTO отделы (название) VALUES 
('Отдел продаж'),
('Сборочный цех'),
('Склад'),
('Администрация');
GO

-- =============================================
-- Начальные данные: склады
-- =============================================
INSERT INTO склады (название, адрес) VALUES 
('Основной склад', 'г. Москва, ул. Примерная, д. 1'),
('Склад комплектующих', 'г. Москва, ул. Примерная, д. 2');
GO

-- =============================================
-- Начальные данные: администратор по умолчанию
-- Примечание: Пароль должен быть захэширован в приложении
-- =============================================
INSERT INTO пользователи (логин, пароль, роль_id, активен) VALUES 
('admin', 'hashed_password_here', 1, 1);
GO

-- =============================================
-- Представление: полная информация о заказе
-- =============================================
CREATE VIEW v_Заказы_Полная AS
SELECT 
    з.заказ_id,
    з.статус,
    з.общая_сумма,
    з.дата_создания,
    з.дата_отгрузки,
    к.клиент_id,
    к.тип_клиента,
    к.фамилия,
    к.имя,
    к.отчество,
    к.наименование_организации,
    к.email,
    к.номер_телефона
FROM заказы з
INNER JOIN клиенты к ON з.клиент_id = к.клиент_id;
GO

-- =============================================
-- Представление: сборочные задания с деталями
-- =============================================
CREATE VIEW v_Сборочные_Задания_Полная AS
SELECT 
    сз.сборка_id,
    сз.название_конфигурации,
    сз.статус,
    сз.дата_начала,
    сз.дата_завершения,
    с.сотрудник_id,
    с.фамилия AS сотрудник_фамилия,
    с.имя AS сотрудник_имя,
    з.заказ_id,
    з.статус AS заказ_статус
FROM сборочные_задания сз
LEFT JOIN сотрудники с ON сз.сотрудник_id = с.сотрудник_id
LEFT JOIN заказы з ON сз.заказ_id = з.заказ_id;
GO

-- =============================================
-- Представление: остатки по всем складам
-- =============================================
CREATE VIEW v_Остатки_Полная AS
SELECT 
    к.компонент_id,
    к.наименование,
    к.тип,
    к.производитель,
    ск.склад_id,
    ск.название AS склад_название,
    ос.количество,
    ос.дата_обновления
FROM компоненты к
INNER JOIN остатки_на_складе ос ON к.компонент_id = ос.компонент_id
INNER JOIN склады ск ON ос.склад_id = ск.склад_id;
GO

-- =============================================
-- Триггер: аудит изменений для таблицы заказы (INSERT)
-- =============================================
CREATE TRIGGER trg_аудит_заказы_INSERT ON заказы
AFTER INSERT
AS
BEGIN
    SET NOCOUNT ON;
    
    INSERT INTO аудит_изменений (таблица, операция, пользователь_id, детали)
    SELECT 'заказы', 'INSERT', 1, 
           CONCAT('Создан заказ ID=', заказ_id, ', клиент_id=', клиент_id, ', сумма=', общая_сумма)
    FROM inserted;
END;
GO

-- =============================================
-- Триггер: аудит изменений для таблицы заказы (UPDATE)
-- =============================================
CREATE TRIGGER trg_аудит_заказы_UPDATE ON заказы
AFTER UPDATE
AS
BEGIN
    SET NOCOUNT ON;
    
    INSERT INTO аудит_изменений (таблица, операция, пользователь_id, детали)
    SELECT 'заказы', 'UPDATE', 1, 
           CONCAT('Обновлен заказ ID=', i.заказ_id, ', статус: ', d.статус, ' -> ', i.статус)
    FROM inserted i
    INNER JOIN deleted d ON i.заказ_id = d.заказ_id;
END;
GO

-- =============================================
-- Хранимая процедура: создание заказа
-- =============================================
CREATE PROCEDURE sp_СоздатьЗаказ
    @клиент_id INT,
    @пользователь_id INT
AS
BEGIN
    SET NOCOUNT ON;
    
    BEGIN TRANSACTION;
    
    DECLARE @заказ_id INT;
    
    INSERT INTO заказы (клиент_id, статус, общая_сумма)
    VALUES (@клиент_id, 'новый', 0.00);
    
    SET @заказ_id = SCOPE_IDENTITY();
    
    INSERT INTO аудит_изменений (таблица, операция, пользователь_id, детали)
    VALUES ('заказы', 'INSERT', @пользователь_id, CONCAT('Создан заказ ID=', @заказ_id));
    
    COMMIT TRANSACTION;
    
    SELECT @заказ_id AS заказ_id;
END;
GO

-- =============================================
-- Хранимая процедура: обновление остатков
-- =============================================
CREATE PROCEDURE sp_ОбновитьОстаток
    @компонент_id INT,
    @склад_id INT,
    @количество INT,
    @пользователь_id INT
AS
BEGIN
    SET NOCOUNT ON;
    
    IF EXISTS (SELECT 1 FROM остатки_на_складе WHERE компонент_id = @компонент_id AND склад_id = @склад_id)
    BEGIN
        UPDATE остатки_на_складе
        SET количество = количество + @количество,
            дата_обновления = GETDATE()
        WHERE компонент_id = @компонент_id AND склад_id = @склад_id;
        
        INSERT INTO аудит_изменений (таблица, операция, пользователь_id, детали)
        VALUES ('остатки_на_складе', 'UPDATE', @пользователь_id, 
                CONCAT('Компонент ', @компонент_id, ' на складе ', @склад_id, ': изменение на ', @количество));
    END
    ELSE
    BEGIN
        INSERT INTO остатки_на_складе (компонент_id, склад_id, количество)
        VALUES (@компонент_id, @склад_id, @количество);
        
        INSERT INTO аудит_изменений (таблица, операция, пользователь_id, детали)
        VALUES ('остатки_на_складе', 'INSERT', @пользователь_id, 
                CONCAT('Добавлен компонент ', @компонент_id, ' на склад ', @склад_id, ', количество: ', @количество));
    END
END;
GO

PRINT '=====================================';
PRINT 'База данных CustomPC_DB успешно создана!';
PRINT '=====================================';
PRINT 'Таблиц: 12';
PRINT 'Представлений: 3';
PRINT 'Триггеров: 2';
PRINT 'Хранимых процедур: 2';
PRINT 'Индексов: 11';
PRINT '=====================================';
GO
